--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -46,6 +46,7 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/ffg, role: ROLE_ADMIN }
         - { path: ^/deck/, role: ROLE_USER }
         - { path: ^/.*/deck/, role: ROLE_USER }
         - { path: ^/.*/decks, role: ROLE_USER }
